Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjIntObjField.quorum
class Main
    Integer v
    v:SetValue(5)
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
